# mexico-gas-geospatial-analysis

./: README.md  TODO.md  pyproject.toml
.github/workflows/: daily_mx_gas_prices_scraper.yml  daily_scraper.yml
data/: historical_gas_prices.csv
data/interim/: gas_prices_2026-05-23.parquet  gas_prices_2026-05-24.parquet  gas_prices_2026-05-25.parquet  gas_prices_2026-05-27.parquet  gas_prices_2026-05-28.parquet  gas_prices_2026-05-29.parquet  gas_prices_2026-05-30.parquet  gas_prices_2026-05-31.parquet  gas_prices_2026-06-01.parquet  gas_prices_2026-06-02.parquet  gas_prices_2026-06-03.parquet  gas_prices_2026-06-04.parquet  gas_prices_2026-06-05.parquet  gas_prices_2026-06-06.parquet  gas_prices_2026-06-07.parquet  gas_prices_2026-06-08.parquet  gas_prices_2026-06-09.parquet  gas_prices_2026-06-10.parquet  gas_prices_2026-06-11.parquet  gas_prices_2026-06-12.parquet  gas_prices_2026-06-13.parquet  gas_prices_2026-06-14.parquet  gas_prices_2026-06-15.parquet  gas_prices_2026-06-16.parquet  gas_prices_2026-06-17.parquet  gas_prices_2026-06-18.parquet  gas_prices_2026-06-19.parquet  gas_prices_2026-06-20.parquet  gas_prices_2026-06-21.parquet  gas_prices_2026-06-22.parquet  gas_prices_2026-06-23.parquet  gas_prices_2026-06-24.parquet  gas_prices_2026-06-25.parquet  gas_prices_2026-06-26.parquet  gas_prices_2026-06-27.parquet  gas_prices_2026-06-28.parquet  gas_prices_2026-06-29.parquet  gas_prices_2026-06-30.parquet  gas_prices_2026-07-01.parquet  gas_prices_2026-07-02.parquet  (+22 more)
data/raw/: gas_prices_2026-05-22.csv  (+1 more)
notebooks/: 01_ETL.ipynb
src/: extract_and_save.py
